--- a/packages/pilot/package.json
+++ b/packages/pilot/package.json
@@ -41,7 +41,8 @@
     "rxjs": "6.4.0",
     "shortid": "2.2.14",
     "validator": "10.6.0",
-    "xlsx": "0.14.0"
+    "xlsx": "0.14.0",
+    "xstate": "4.8.0"
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
